<resources>
    <string name="app_name">CALENDAR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="hello">Hello</string>
    <string name="create_an_account">Create An Account</string>
    <string name="mail">Mail</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_info">Change Info</string>
    <string name="nameapp">Name Project</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="buildtypes">Build Types</string>
    <string name="falvor">Falvor</string>
    <string name="title_activity_maps">Map</string>

    <!--String related to login-->
    <string name="login">LOGIN</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_here">Not a Member yet? Register Here</string>

    <!--String related to register-->
    <string name="register">REGISTER</string>
    <string name="username">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_register">By clicking here, you agree all the Terms and Coditions</string>
    <string name="login_here">Already have Account? Login here</string>

    <!--String related to forgot password-->
    <string name="registered_email_id">Please enter your Registered Email ID</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!--String related to change password-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">TODAY</string>
    <string name="add_event">Add Event</string>
    <string name="author_information">Author Information</string>
    <string name="le_hoang_han">Le Hoang Han</string>
</resources>
