<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_account_ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground_alpha_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_change_account_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_account_grey600_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/activity_change_account_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_change_account_tv_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_email_outline_grey600_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mail"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/activity_change_account_tv_mail_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_change_account_tv_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_lock_grey600_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/old_password"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/activity_change_account_et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/activity_change_account_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_lock_plus_grey600_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/activity_change_account_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_change_account_tv_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_lock_plus_grey600_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/confirm_password"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/activity_change_account_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_change_account_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btnlogin_selector"
            android:fontFamily="sans-serif-medium"
            android:text="@string/save"
            android:textColor="@color/colorCyan"
            android:textSize="18dp" />

        <Button
            android:id="@+id/activity_change_account_btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btnlogin_selector"
            android:fontFamily="sans-serif-medium"
            android:text="@string/clear"
            android:textColor="@color/colorCyan"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>