<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:scrollbars="none"
    tools:ignore="contentDescription,MissingPrefix">

    <LinearLayout
        android:id="@+id/activity_regiter_ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_app" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/register"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontPath="fonts/Roboto_Bold.ttf" />

        <EditText
            android:id="@+id/activity_register_et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_account_white_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:fontPath="fonts/Roboto_Medium.ttf" />

        <View
            android:id="@+id/activity_register_v_username_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/activity_register_et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_email_outline_white_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:fontPath="fonts/Roboto_Medium.ttf" />

        <View
            android:id="@+id/activity_register_v_email_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/activity_register_et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:fontPath="fonts/Roboto_Medium.ttf" />

        <View
            android:id="@+id/activity_register_v_password_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/activity_register_et_confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock_plus_white_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:fontPath="fonts/Roboto_Medium.ttf" />

        <View
            android:id="@+id/activity_register_v_confirmpassword_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/white_greyish" />

        <CheckBox
            android:id="@+id/activity_register_cb_agree_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/check_register"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:fontPath="fonts/Roboto_Medium.ttf" />

        <RelativeLayout
            android:id="@+id/activity_register_rl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnlogin_selector"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:textColor="@color/colorCyan"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontPath="fonts/Roboto_Medium.ttf" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_register_rl_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@color/bg_text_color_1"
                android:textSize="15sp"
                app:fontPath="fonts/Roboto_Medium.ttf" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>