<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue">

    <LinearLayout
        android:id="@+id/activity_about_ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/activity_about_iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_calendar" />

        <LinearLayout
            android:id="@+id/activity_about_ll_nameapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_nameapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/nameapp"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_nameapp_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="60px" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="Full Name:"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="LÊ HOÀNG HÂN"
                android:textSize="60px" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_account_ll_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/version_name"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_version_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_account_ll_version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_version_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/version_code"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_version_code_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />




        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_account_ll_buildtypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_build_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/buildtypes"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_build_type_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_account_ll_flavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:background="@drawable/custom_text_about"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_about_tv_flavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/falvor"
                android:textSize="60px" />

            <TextView
                android:id="@+id/activity_about_tv_flavor_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
